--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="C:\Users\intel\Desktop\image.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>PRAVINA R</h1>
             <p>computer science student</p>
             <p>GOVERNMENT ARTS AND SCIENCE COLLEGE</p>
